--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,4 +21,4 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: PDF
-          path: CV_EM.pdf
+          path: CV_VEMS_2025_DA.pdf
