--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,7 +17,7 @@ jobs:
         with:
           name: Draft ${{ env.TIMESTAMP }}
           tag_name: CV
-          files: CV_EM.pdf
+          files: CV_VEMS_2025_DA.pdf
       - uses: actions/upload-artifact@v4
         with:
           name: PDF
